--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello pride</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <title>coursera</title>
+
 </head>
-<body>
-<h1>hello</h1>
+
+<body >
+    <h1>Our Menu</h1>
+   <div class="row">
+
+       <div id="container" class="col-lg-4 col-mg-6"><p class="one1">Hi</p>
+    <p class="one">Hi</p>
+</div>
+
+<div id="container1"class="col-lg-4 col-mg-6"><p class="one1">Hello</p>
+    <p class="two">Hello</p>
+</div>
+
+<div id="container2"class="col-lg-4 col-mg-6"><p class="one1">Namasthe</p>
+    <p class="three">Namasthe</p>
+</div>
+
+</div>
+        
+
+
+</section>
 </body>
 </html>
